// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TokensVerticalList /> renders correctly and matches snapshot for left position 1`] = `
<div
  className="flex flex-col flex-1 mobile:p-0 mobile:border-0 pr-10 border-r-[3px] border-[#1F1D23]"
>
  <HorizontalToken
    isLast={false}
    tokenIndex={1}
    tokenName="Token A"
    tokenSymbol="TKA"
  />
  <HorizontalToken
    isLast={true}
    tokenIndex={2}
    tokenName="Token B"
    tokenSymbol="TKB"
  />
</div>
`;

exports[`<TokensVerticalList /> renders correctly and matches snapshot for right position 1`] = `
<div
  className="flex flex-col flex-1 mobile:p-0 mobile:border-0 pl-10"
>
  <HorizontalToken
    isLast={false}
    tokenIndex={4}
    tokenName="Token A"
    tokenSymbol="TKA"
  />
  <HorizontalToken
    isLast={true}
    tokenIndex={5}
    tokenName="Token B"
    tokenSymbol="TKB"
  />
</div>
`;
